@@ -1,14 +1,4 @@
-<use name=DataFormats/FEDRawData>
-<use name=FWCore/Framework>
-<use name=FWCore/ParameterSet>
-<use name=FWCore/PluginManager>
-<flags EDM_PLUGIN=1>
-
 <export>
   <lib name=EventFilterPlayback>
-  <use name=DataFormats/FEDRawData>
-  <use name=FWCore/Framework>
-  <use name=FWCore/ParameterSet>
-  <use name=FWCore/PluginManager>
 </export>
 
