@@ -1,3 +1,8 @@
+2007-03-27  Emilio Meschi           <emilio.meschi@cern.ch>
+
+	* tag V00-01-00
+	* reorganize for new plugin manager
+	
 2007-03-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-00-07
